# emf-detect

./: README.md  emf_detect.py  pyproject.toml
