[project]
name = "emf-detect"
version = "0.1.0"
description = "Alerts when EMF is detected"
authors = [
    {name = "johnrezk", email = "johnrezk@users.noreply.github.com"},
]
dependencies = ["pyrtlsdr[lib]>=0.3.0", "numpy>=2.2.3", "setuptools>=75.8.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
